# LongConspectWriter

./: .env.example  .gitignore  LICENSE  README.md  README.ru.md  __main__.py  pyproject.toml
assets/: architecture.mmd  tables.md
data/example-conspect/: FINAL_MONOLITH_CONSPECTUS.md  Qwen_Qwen2.5-7B-Instruct-large-v3-turbo-cuda-float16-Защита инф-1774820035-1111.txt  Qwen_Qwen2.5-7B-Instruct-large-v3-turbo-cuda-float16-Защита инф-1774820035.txt  Qwen_Qwen2.5-7B-Instruct-large-v3-turbo-cuda-float16-Защита инф-1774820035.txt-1774916439  Qwen_Qwen2.5-7B-Instruct-large-v3-turbo-cuda-float16-Защита инф-1774820035.txt-1775060213.txt  Qwen_Qwen2.5-7B-Instruct-large-v3-turbo-cuda-float16-Защита инф-1774820035.txt-1775064036.txt  THUDM-LongWriter-llama3.1-8b-Qwen-Qwen2.5-7B-Instruct-large-v3-turbo-cuda-float16-Защита инф-1775087001.txt-1775087065.txt-1775087120  THUDM-LongWriter-llama3.1-8b-Qwen_Qwen2.5-7B-Instruct-large-v3-turbo-cuda-float16-Защита инф-1775083819.txt-1775084192.txt-1775086757
data/example-mini-conspect/: Qwen-Qwen2.5-7B-Instruct-large-v3-turbo-cuda-float16-Защита инф-1775087001.txt-1775087065.txt  Qwen_Qwen2.5-7B-Instruct-large-v3-turbo-cuda-float16-Защита инф-1775065310.txt-1775065387.txt  Qwen_Qwen2.5-7B-Instruct-large-v3-turbo-cuda-float16-Защита инф-1775083819.txt-1775084192.txt
data/example-transcrib/: large-v3-cpu-int8-Защита инф-1774813233.txt  large-v3-cuda-float16-Защита инф-1774814709.txt  large-v3-cuda-float16-Защита инф-1774815107.txt  large-v3-cuda-float16-Защита инф-1774816599.txt  large-v3-cuda-float16-Защита инф-1774816869.txt  large-v3-cuda-float16-Защита инф-1774818076.txt  large-v3-turbo-cuda-float16-Защита инф-1774820035.txt  large-v3-turbo-cuda-float16-Защита инф-1775052434.txt  large-v3-turbo-cuda-float16-Защита инф-1775056327.txt  large-v3-turbo-cuda-float16-Защита инф-1775057141.txt  large-v3-turbo-cuda-float16-Защита инф-1775057494.txt  large-v3-turbo-cuda-float16-Защита инф-1775064332.txt  large-v3-turbo-cuda-float16-Защита инф-1775064501.txt  large-v3-turbo-cuda-float16-Защита инф-1775064904.txt  large-v3-turbo-cuda-float16-Защита инф-1775064944.txt  large-v3-turbo-cuda-float16-Защита инф-1775065310.txt  large-v3-turbo-cuda-float16-Защита инф-1775083626.txt  large-v3-turbo-cuda-float16-Защита инф-1775083687.txt  large-v3-turbo-cuda-float16-Защита инф-1775083819.txt  large-v3-turbo-cuda-float16-Защита инф-1775087001.txt
docs/: article.md  index.html
docs/diagrams/: README.md  activity.puml  classes.puml  state.puml  (+2 more)
evaluation/: dataset.md
src/: __init__.py  agent_drafter.py  agent_synthesizer.py  ai_configs.py  bad_words.py  pipeline.py  pipline.py  transcribing.py  utils.py
(+362 files in other folders)
