[project]
name = "longconspectwriter"
version = "0.1.0"
description = "Multi-Agent System for Audio-to-Markdown processing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dacite>=1.9.2",
    "faster-whisper>=1.2.1",
    "hdbscan>=0.8.42",
    "langchain-text-splitters>=1.1.1",
    "llama-cpp-python==0.3.20",
    "loguru>=0.7.3",
    "packaging>=24.1",
    "pymorphy3>=2.0.6",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "razdel>=0.5.0",
    "ruff>=0.15.10",
    "sentence-transformers>=5.3.0",
    "tenacity>=9.1.4",
    "torch>=2.4.1",
    "tqdm>=4.66.5",
    "umap-learn>=0.5.12",
    "whisper-normalizer>=0.1.12",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
