[project]
name = "longconspectwriter"
version = "0.1.0"
description = "Multi-Agent System for Audio-to-Markdown processing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dacite>=1.9.2",
    "dawg-python>=0.7.2",
    "faster-whisper>=1.2.1",
    "gliner>=0.2.26",
    "hdbscan>=0.8.42",
    "langchain-text-splitters>=1.1.1",
    "llama-cpp-python==0.3.20",
    "loguru>=0.7.3",
    "markdown>=3.10.2",
    "matplotlib>=3.10.8",
    "nvidia-ml-py>=13.595.45",
    "packaging>=24.1",
    "playwright>=1.59.0",
    "pymorphy3>=2.0.6",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "razdel>=0.5.0",
    "ruff>=0.15.10",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.3.0",
    "tenacity>=9.1.4",
    "torch>=2.4.1",
    "tqdm>=4.66.5",
    "umap-learn>=0.5.12",
    "whisper-normalizer>=0.1.12",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
